# emns

./: .gitignore  CONTRIBUTING.md  README.md
.github/: dependabot.yml
agent/: .gitignore  Cargo.toml  README.md  env.example  install-service.ps1  run.ps1  test_server.rs
agent/src/: audio.rs  client.rs  handler.rs  main.rs  messages.rs  notification.rs
docs/: BUILD_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SERVER_GUIDE.md  pyproject.toml  zensical.toml
docs/docs/: dev_setup.md  index.md
